# cozy-spring-jam

./: .gitignore
assets_raw/: bullet.pxo  enemy_slime.pxo  heart_empty.pxo  heart_full.pxo  heart_half.pxo
cozy-spring-jam/: Cargo.toml
cozy-spring-jam/src/: attribute.rs  bullet.rs  enemy.rs  enemy_drop.rs  gun.rs  lib.rs  player.rs  room.rs
cozy-spring-jam/src/player/: health_hud.rs
cozy-spring-jam/src/utils/: grid.rs
godot/: debug_tiles.aseprite  debug_tiles.png.import  export_presets.cfg  project.godot  rust_bind.gdextension  rust_bind.gdextension.uid
godot/addons/limbo_console/: ascii_art.gd.uid  builtin_commands.gd.uid  command_entry.gd.uid  config_mapper.gd.uid  console_options.gd.uid  limbo_console.gd.uid  plugin.gd.uid  util.gd.uid
godot/assets/: bullet.png.import  bullet_decay.png.import  caterpillar_h.png.import  cursor.png.import  explosion_particle.png.import  floor.png.import  floor.tres  gun.png.import  gun_cooldown.png.import  gun_shoot.png.import  player_walk..png.import  walls.png.import  walls.tres
godot/assets/npcs/: enemy_slime.png.import
godot/assets/player/: heart_empty.png.import  heart_full.png.import  heart_half.png.import
godot/assets/sfx/: bounce.wav.import  explosion.wav.import  shot.wav.import
godot/behavior/tasks/: attack_ranged.gd  attack_ranged.gd.uid  check_range.gd  (+11 more)
godot/scenes/: bullet.tscn  bullet_material.tres  bullet_scene.tscn  bullet_spawner.tscn  debug_scene.tscn  gun.tscn  ingame_scene.tscn  main_menu_scene.tscn  player_scene.tscn  room_scene.tscn  walls_scene.tscn
godot/utils/: console.gd  console.gd.uid
(+10 files in other folders)
